--- a/IDCA.Client/View/HeaderSettingView.xaml
+++ b/IDCA.Client/View/HeaderSettingView.xaml
@@ -8,93 +8,147 @@
              d:DataContext="{d:DesignInstance Type=viewmodel:HeaderSettingViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="550" 
-             d:DesignWidth="1200">
+             d:DesignWidth="950">
     <Grid>
 
+        <Grid.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+                <Setter Property="FontSize" Value="13"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+                <Setter Property="FontSize" Value="13"/>
+                <Setter Property="Height" Value="25"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+            </Style>
+            <Style TargetType="Button">
+                <Setter Property="Margin" Value="5"/>
+                <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+                <Setter Property="FontSize" Value="13"/>
+                <Setter Property="Height" Value="25"/>
+                <Setter Property="VerticalAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
+            </Style>
+        </Grid.Resources>
+        
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="20 0 0 0">
 
-            <StackPanel.Resources>
-                <Style TargetType="Button">
-                    <Setter Property="Width" Value="100"/>
-                    <Setter Property="Height" Value="30"/>
-                    <Setter Property="Margin" Value="5"/>
-                    <Setter Property="FontSize" Value="13"/>
-                    <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
-                </Style>
-                <Style TargetType="TextBlock">
-                    <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                    <Setter Property="FontSize" Value="15"/>
-                    <Setter Property="VerticalAlignment" Value="Center"/>
-                    <Setter Property="Margin" Value="5"/>
-                </Style>
-                <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
-                    <Setter Property="Width" Value="120"/>
-                    <Setter Property="Height" Value="30"/>
-                    <Setter Property="Margin" Value="5"/>
-                    <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                    <Setter Property="FontSize" Value="14"/>
-                    <Setter Property="VerticalAlignment" Value="Center"/>
-                    <Setter Property="VerticalContentAlignment" Value="Center"/>
-                </Style>
-            </StackPanel.Resources>
-
             <TextBlock>表头名称</TextBlock>
-            <TextBox Text="{Binding HeaderName}" />
+            <TextBox Width="130" Text="{Binding HeaderName}" />
             <Button Command="{Binding NewElementCommand}">添加表头元素</Button>
             
         </StackPanel>
 
-        <ScrollViewer Grid.Row="1">
+        <DataGrid Grid.Row="1"
+                  Style="{StaticResource IDCA.DataGrid.Base}"
+                  ItemsSource="{Binding Elements}"
+                  d:ItemsSource="{d:SampleData ItemCount=5}"
+                  >
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="150">
+                    <DataGridTextColumn.Header>
+                        <TextBlock>码号</TextBlock>
+                    </DataGridTextColumn.Header>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="VerticalAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.Binding>
+                        <Binding Path="VariableName"/>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
+                <DataGridTextColumn Width="200">
+                    <DataGridTextColumn.Header>
+                        <TextBlock>描述</TextBlock>
+                    </DataGridTextColumn.Header>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="VerticalAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.Binding>
+                        <Binding Path="Description"/>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
+                <DataGridTextColumn Width="200">
+                    <DataGridTextColumn.Header>
+                        <TextBlock>表达式</TextBlock>
+                    </DataGridTextColumn.Header>
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="VerticalAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                    <DataGridTextColumn.Binding>
+                        <Binding Path="Expression"/>
+                    </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
+                <DataGridTemplateColumn Width="30">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Style="{StaticResource IDCA.Button.Close}"
+                                    Command="{Binding RemoveCommand}"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        
+        <!--<ScrollViewer Grid.Row="1">
             <ItemsControl ItemsSource="{Binding Elements}"
                           d:ItemsSource="{d:SampleData ItemCount=5}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Border Height="60" 
-                                Width="1150"
+                        <Border Height="45" 
+                                Width="950"
                                 BorderThickness="0 0 0 1"
                                 BorderBrush="{StaticResource IDCA.Brushes.Window.BorderBrush}">
                             <Grid>
 
                                 <Grid.Resources>
-                                    <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
+                                    <Style TargetType="TextBox">
                                         <Setter Property="Width" Value="150"/>
-                                        <Setter Property="Height" Value="30"/>
-                                        <Setter Property="Margin" Value="5"/>
+                                        <Setter Property="Height" Value="25"/>
+                                        <Setter Property="Margin" Value="5 10"/>
                                         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                                        <Setter Property="FontSize" Value="14"/>
+                                        <Setter Property="FontSize" Value="13"/>
                                         <Setter Property="VerticalAlignment" Value="Center"/>
                                         <Setter Property="VerticalContentAlignment" Value="Center"/>
                                     </Style>
                                     <Style TargetType="Button">
                                         <Setter Property="Width" Value="80"/>
-                                        <Setter Property="Height" Value="30"/>
+                                        <Setter Property="Height" Value="25"/>
                                         <Setter Property="FontSize" Value="14"/>
-                                        <Setter Property="Margin" Value="5"/>
+                                        <Setter Property="Margin" Value="5 10"/>
+                                        <Setter Property="VerticalAlignment" Value="Center"/>
                                         <Setter Property="VerticalContentAlignment" Value="Center"/>
                                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
                                     </Style>
                                     <Style TargetType="TextBlock">
                                         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                                        <Setter Property="FontSize" Value="15"/>
+                                        <Setter Property="FontSize" Value="13"/>
                                         <Setter Property="VerticalAlignment" Value="Center"/>
-                                        <Setter Property="Margin" Value="5"/>
+                                        <Setter Property="Margin" Value="5 10"/>
                                     </Style>
                                     <Style TargetType="GridSplitter">
-                                        <Setter Property="Height" Value="30"/>
+                                        <Setter Property="Height" Value="35"/>
                                         <Setter Property="Width" Value="1"/>
                                     </Style>
                                 </Grid.Resources>
 
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="10"/>
-                                    <RowDefinition Height="40"/>
-                                    <RowDefinition Height="10"/>
-                                </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="20"/>
                                     <ColumnDefinition Width="*"/>
@@ -124,15 +178,18 @@
                                             Height="25"
                                             Command="{Binding RemoveCommand}"
                                             Background="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"
-                                            Foreground="Red"
                                             HorizontalAlignment="Left"
                                             Cursor="Hand">
                                         <Button.Template>
                                             <ControlTemplate TargetType="Button">
-                                                <Grid Background="{TemplateBinding Background}">
+                                                <Grid Background="{TemplateBinding Background}"
+                                                      Width="25"
+                                                      Height="25">
                                                     <iconPack:PackIconMaterialDesign Kind="Close"
-                                                                                 Height="25"
-                                                                                 Width="25"/>
+                                                                                     HorizontalAlignment="Center"
+                                                                                     VerticalAlignment="Center"
+                                                                                     Height="15"
+                                                                                     Width="15"/>
                                                 </Grid>
                                             </ControlTemplate>
                                         </Button.Template>
@@ -143,7 +200,7 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-        </ScrollViewer>
+        </ScrollViewer>-->
         
     </Grid>
 </UserControl>
