--- a/IDCA.Client/View/StartWindow.xaml
+++ b/IDCA.Client/View/StartWindow.xaml
@@ -1,16 +1,17 @@
-﻿<Window
+﻿<view:CustomWindow
     x:Class="IDCA.Client.View.StartWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:view="clr-namespace:IDCA.Client.View"
     xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
     d:DataContext="{d:DesignInstance Type=viewmodel:StartWindowViewModel}"
     mc:Ignorable="d"
-    Height="500" 
-    Width="840"
-    ResizeMode="CanMinimize">
+    Height="440" 
+    Width="780"
+    Style="{StaticResource CustomWindowStyle}">
 
     <Window.DataContext>
         <viewmodel:StartWindowViewModel/>
@@ -25,25 +26,25 @@
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="80"/>
-                <RowDefinition Height="40"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="30"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0"
                        Text="DataCollection Automation"
                        FontFamily="{StaticResource IDCA.Font.Family.English}"
-                       FontSize="34"
+                       FontSize="30"
                        VerticalAlignment="Center"
                        FontWeight="Bold"/>
             <TextBlock Grid.Row="1"
                        Margin="20 0 0 0"
                        Text="选择模板"
                        FontFamily="{StaticResource IDCA.Font.Family}"
-                       FontSize="18"
+                       FontSize="16"
                        VerticalAlignment="Center"/>
             <ListBox Grid.Row="2"
                      Margin="20 8 80 50"
-                     Width="300"
+                     Width="270"
                      BorderThickness="0"
                      Background="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}" 
                      ItemsSource="{Binding TemplateItems}"
@@ -51,7 +52,7 @@
                      d:ItemsSource="{d:SampleData ItemCount=5}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <Grid Width="250"
+                        <Grid Width="240"
                               HorizontalAlignment="Center"
                               VerticalAlignment="Center">
                             <Grid.RowDefinitions>
@@ -61,7 +62,7 @@
                             <TextBlock Grid.Row="0"
                                        Margin="5 0 40 0"
                                        Text="{Binding TemplateName}"
-                                       FontSize="17"
+                                       FontSize="15"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left"
                                        FontFamily="{StaticResource IDCA.Font.Family}"/>
@@ -83,8 +84,8 @@
             <Grid.Resources>
                 <Style x:Key="IDCA.Window.Start.DialogButton" 
                        TargetType="Button">
-                    <Setter Property="Height" Value="30"/>
-                    <Setter Property="Width" Value="30"/>
+                    <Setter Property="Height" Value="25"/>
+                    <Setter Property="Width" Value="25"/>
                     <Setter Property="Margin" Value="5"/>
                     <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
                     <Setter Property="VerticalContentAlignment" Value="Bottom"/>
@@ -92,35 +93,37 @@
                     <Setter Property="Content" Value="..."/>
                 </Style>
                 <Style x:Key="IDCA.Window.Button.Common" TargetType="Button">
-                    <Setter Property="Width" Value="80"/>
-                    <Setter Property="Height" Value="35"/>
+                    <Setter Property="Width" Value="60"/>
+                    <Setter Property="Height" Value="30"/>
+                    <Setter Property="FontSize" Value="13"/>
+                    <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                     <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
                 </Style>
                 <Style TargetType="TextBlock">
                     <Setter Property="VerticalAlignment" Value="Bottom"/>
                     <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                    <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.TextBlock.Label}"/>
+                    <Setter Property="FontSize" Value="13"/>
                 </Style>
                 <Style TargetType="TextBox">
                     <Setter Property="Width" Value="340"/>
-                    <Setter Property="Height" Value="30"/>
-                    <Setter Property="FontSize" Value="15"/>
+                    <Setter Property="Height" Value="25"/>
+                    <Setter Property="FontSize" Value="13"/>
                     <Setter Property="VerticalContentAlignment" Value="Center"/>
-                    <Setter Property="FontFamily" Value="{StaticResource MaterialDesignFont}"/>
+                    <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                 </Style>
             </Grid.Resources>
             
             <Grid.RowDefinitions>
                 <RowDefinition Height="80"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="40"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="40"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="40"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="40"/>
-                <RowDefinition Height="100"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
             <Button Grid.Row="0"
@@ -135,7 +138,7 @@
                         <Grid Width="35"
                               Height="35"
                               Background="#00000000">
-                            <icon:PackIconMaterial Kind="Wrench"
+                            <icon:PackIconOcticons Kind="Gear"
                                                    Width="30"
                                                    Height="30"
                                                    VerticalAlignment="Center"
@@ -172,9 +175,8 @@
             </StackPanel>
 
             <Button Grid.Row="9"
-                    Margin="30"
-                    FontSize="15"
                     HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
                     IsEnabled="{Binding IsConfirmButtonEnable}"
                     Command="{Binding ConfirmCommand}"
                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}}" 
@@ -183,4 +185,4 @@
 
         </Grid>
     </Grid>
-</Window>
+</view:CustomWindow>
