--- a/IDCA.Client/View/Style/Colors.xaml
+++ b/IDCA.Client/View/Style/Colors.xaml
@@ -32,4 +32,6 @@
     <SolidColorBrush x:Key="IDCA.Brushes.Button.Background" Color="{StaticResource IDCA.Colors.Button.Background}"/>
     <SolidColorBrush x:Key="IDCA.Brushes.Button.Background.Click" Color="{StaticResource IDCA.Colors.Button.Background.Click}"/>
 
+    <SolidColorBrush x:Key="IDCA.Burshes.DataGrid.Separater" Color="{StaticResource IDCA.Colors.Window.Borderbrush}"/>
+
 </ResourceDictionary>
