--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="IDCA.Client.View.TableSettingWindow"
+﻿<view:CustomWindow 
+        x:Class="IDCA.Client.View.TableSettingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,9 +9,9 @@
         xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
         d:DataContext="{d:DesignInstance Type=viewmodel:TableSettingWindowViewModel}"
         mc:Ignorable="d"
-        Height="800" 
-        Width="1200"
-        ResizeMode="CanMinimize">
+        Height="600" 
+        Width="1000"
+        Style="{StaticResource CustomWindowStyle}">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -19,9 +20,8 @@
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -33,17 +33,18 @@
             
             <StackPanel Grid.Column="0" Orientation="Horizontal">
                 <StackPanel.Resources>
-                    <Style TargetType="Button" BasedOn="{StaticResource MaterialDesignPaperButton}">
+                    <Style TargetType="Button">
                         <Setter Property="Margin" Value="5"/>
                         <Setter Property="Width" Value="60"/>
-                        <Setter Property="Height" Value="30"/>
+                        <Setter Property="Height" Value="20"/>
                         <Setter Property="Cursor" Value="Hand"/>
                     </Style>
-                    <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
+                    <Style TargetType="TextBox">
                         <Setter Property="Width" Value="120"/>
-                        <Setter Property="Height" Value="30"/>
+                        <Setter Property="Height" Value="20"/>
                         <Setter Property="IsReadOnly" Value="True"/>
-                        <Setter Property="FontSize" Value="15"/>
+                        <Setter Property="FontSize" Value="13"/>
+                        <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
                     </Style>
                 </StackPanel.Resources>
 
@@ -63,7 +64,7 @@
                     </Button.Template>
                 </Button>
 
-                <TextBox Text="{Binding ProjectPath}"/>
+                <TextBox VerticalContentAlignment="Center" Text="{Binding ProjectPath}"/>
 
                 <Button Command="{Binding SelectMdmDocumentCommand}" Cursor="Hand">
                     <Button.Template>
@@ -81,7 +82,7 @@
                     </Button.Template>
                 </Button>
 
-                <TextBox Text="{Binding MdmDocumentPath}"/>
+                <TextBox VerticalContentAlignment="Center" Text="{Binding MdmDocumentPath}"/>
 
                 <Button Command="{Binding SelectExcelSettingFileCommand}" Cursor="Hand">
                     <Button.Template>
@@ -99,7 +100,7 @@
                     </Button.Template>
                 </Button>
 
-                <TextBox Text="{Binding ExcelSettingFilePath}"/>
+                <TextBox VerticalContentAlignment="Center" Text="{Binding ExcelSettingFilePath}"/>
 
             </StackPanel>
 
@@ -131,7 +132,7 @@
         <Grid Grid.Row="1">
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="130"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
@@ -143,60 +144,35 @@
                           ItemsSource="{Binding Tree.Children}"
                           d:ItemsSource="{d:SampleData ItemCount=5}">
                     <TreeView.ItemContainerStyle>
-                        <Style TargetType="TreeViewItem" BasedOn="{StaticResource MaterialDesignTreeViewItem}">
+                        <Style TargetType="TreeViewItem">
                             <Setter Property="IsSelected" Value="{Binding IsSelected}"/>
                         </Style>
                     </TreeView.ItemContainerStyle>
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate ItemsSource="{Binding Children}">
-                            <Grid Height="26" Margin="0 3">
+                            <Grid Height="25" Margin="0 3">
                                 <Grid.Resources>
                                     <Style TargetType="Button">
                                         <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
                                     </Style>
                                 </Grid.Resources>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="40"/>
+                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition Width="30"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Grid.Column="0" 
-                                           FontSize="16"
+                                           FontSize="13"
+                                           FontFamily="{StaticResource IDCA.Font.Family}"
                                            VerticalAlignment="Center"
                                            Text="{Binding Name}"/>
                                 <Button Grid.Column="1"
-                                        Width="40"
-                                        Height="26"
-                                        Cursor="Hand"
+                                        Style="{StaticResource IDCA.Button.Add}"
                                         Visibility="{Binding AllowAppendChild, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                        Command="{Binding AddChildCommand}">
-                                    <Button.Template>
-                                        <ControlTemplate TargetType="Button">
-                                            <Grid Background="#00000000">
-                                                <icon:PackIconMaterialDesign VerticalAlignment="Center"
-                                                                             HorizontalAlignment="Center"
-                                                                             Kind="Add"
-                                                                             />
-                                            </Grid>
-                                        </ControlTemplate>
-                                    </Button.Template>
-                                </Button>
+                                        Command="{Binding AddChildCommand}"/>
                                 <Button Grid.Column="1"
-                                        Width="40"
-                                        Height="26"
-                                        Cursor="Hand"
+                                        Style="{StaticResource IDCA.Button.Remove}"
                                         Visibility="{Binding AllowNodeRemoving, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                        Command="{Binding RemoveCommand}">
-                                    <Button.Template>
-                                        <ControlTemplate TargetType="Button">
-                                            <Grid Background="#00000000">
-                                                <icon:PackIconMaterialDesign VerticalAlignment="Center"
-                                                                             HorizontalAlignment="Center"
-                                                                             Kind="Close"
-                                                                             Foreground="{Binding RelativeSource={RelativeSource AncestorType=TreeViewItem}, Path=Foreground}"/>
-                                            </Grid>
-                                        </ControlTemplate>
-                                    </Button.Template>
-                                </Button>
+                                        Command="{Binding RemoveCommand}"/>
                             </Grid>
                         </HierarchicalDataTemplate>
                     </TreeView.ItemTemplate>
@@ -217,4 +193,4 @@
 
         </Grid>
     </Grid>
-</Window>
+</view:CustomWindow>
