--- a/IDCA.Client/View/HeaderSettingView.xaml
+++ b/IDCA.Client/View/HeaderSettingView.xaml
@@ -3,25 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:iconPack="http://metro.mahapps.com/winfx/xaml/iconpacks" 
              xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
              d:DataContext="{d:DesignInstance Type=viewmodel:HeaderSettingViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="550" 
-             d:DesignWidth="950">
+             d:DesignHeight="700" 
+             d:DesignWidth="1000">
     <Grid>
 
         <Grid.Resources>
             <Style TargetType="TextBlock">
                 <Setter Property="Margin" Value="5"/>
                 <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                <Setter Property="FontSize" Value="13"/>
+                <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.TextBlock.Label}"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
             </Style>
             <Style TargetType="TextBox">
                 <Setter Property="Margin" Value="5"/>
                 <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                <Setter Property="FontSize" Value="13"/>
+                <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
                 <Setter Property="Height" Value="25"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
@@ -29,8 +28,8 @@
             <Style TargetType="Button">
                 <Setter Property="Margin" Value="5"/>
                 <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-                <Setter Property="FontSize" Value="13"/>
-                <Setter Property="Height" Value="25"/>
+                <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
+                <Setter Property="Height" Value="35"/>
                 <Setter Property="VerticalAlignment" Value="Center"/>
                 <Setter Property="VerticalContentAlignment" Value="Center"/>
                 <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -39,7 +38,7 @@
         </Grid.Resources>
         
         <Grid.RowDefinitions>
-            <RowDefinition Height="35"/>
+            <RowDefinition Height="45"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -96,7 +95,7 @@
                         <Binding Path="Expression"/>
                     </DataGridTextColumn.Binding>
                 </DataGridTextColumn>
-                <DataGridTemplateColumn Width="30">
+                <DataGridTemplateColumn Width="35">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Style="{StaticResource IDCA.Button.Close}"
