--- a/IDCA.Client/View/Style/DataGrid.xaml
+++ b/IDCA.Client/View/Style/DataGrid.xaml
@@ -3,7 +3,7 @@
     <Style x:Key="IDCA.DataGrid.Base" TargetType="DataGrid">
         <Setter Property="Margin" Value="5"/>
         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
-        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
         <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
         <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
         <Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
@@ -17,7 +17,7 @@
         <Setter Property="CanUserResizeRows" Value="False"/>
         <Setter Property="CanUserSortColumns" Value="False"/>
         <Setter Property="RowHeaderWidth" Value="0"/>
-        <Setter Property="ColumnHeaderHeight" Value="30"/>
+        <Setter Property="ColumnHeaderHeight" Value="35"/>
         <Setter Property="ColumnHeaderStyle">
             <Setter.Value>
                 <Style TargetType="DataGridColumnHeader">
@@ -28,7 +28,7 @@
         <Setter Property="RowStyle">
             <Setter.Value>
                 <Style TargetType="DataGridRow">
-                    <Setter Property="Height" Value="30"/>
+                    <Setter Property="Height" Value="35"/>
                 </Style>
             </Setter.Value>
         </Setter>
